@@ -8,7 +8,6 @@
 package org.elasticsearch.xpack.application.rules.action;
 
 import org.elasticsearch.TransportVersion;
-import org.elasticsearch.TransportVersions;
 import org.elasticsearch.common.io.stream.Writeable;
 import org.elasticsearch.test.AbstractBWCSerializationTestCase;
 import org.elasticsearch.xcontent.XContentParser;
@@ -16,7 +15,6 @@ import org.elasticsearch.xpack.application.rules.QueryRule;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.test.BWCVersions.getAllBWCVersions;
 import static org.elasticsearch.xpack.application.EnterpriseSearchModuleTestUtils.randomQueryRule;
@@ -52,6 +50,6 @@ public class GetQueryRuleActionResponseBWCSerializingTests extends AbstractBWCSe
 
     @Override
     protected List<TransportVersion> bwcVersions() {
-        return getAllBWCVersions().stream().filter(v -> v.onOrAfter(TransportVersions.V_8_15_0)).collect(Collectors.toList());
+        return getAllBWCVersions().stream().toList();
     }
 }
